--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,8 @@ dist-ssr
 *.sw?
 
 # Media directories
-public/soundtracks/*
+public/audio/*
+
+# Media configuration files
+clipData.json
+sectionData.json
